<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Created by HDev (Antonio Siciliani, Cosimo Mollica, Daniele Monaca, Domenico Ferraro, Marco De Caria)
  ~ Copyright (c) 2016. All rights reserved.
  ~
  ~ Last modified 20/12/16 15.39
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bluetooth_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hdevteam.impiccato.BluetoothModeActivity">

    <com.hdevteam.impiccato.UI.HDTMTextView
        android:text="@string/bt_mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/bt_mode_txt_title_margin_top"
        android:textSize="@dimen/bt_mode_txt_title_text_size" />

    <com.hdevteam.impiccato.UI.HDTMTextView
        android:text="@string/bt_mode_client_server_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDescription"
        android:textSize="@dimen/bt_mode_text_description_text_size"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/bt_mode_txt_description_margin" />

    <com.hdevteam.impiccato.UI.HDTMTextView
        android:text="@string/bt_mode_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDescrGame"
        android:textSize="@dimen/bt_mode_txt_descr_game_text_size"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/txtTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/bt_mode_txt_description_margin"
        android:layout_marginRight="@dimen/bt_mode_txt_description_margin" />

    <com.hdevteam.impiccato.UI.HDTMButton
        android:text="@string/guest_button"
        android:layout_width="@dimen/bt_mode_btn_width"
        android:layout_height="@dimen/bt_mode_btn_height"
        android:id="@+id/btnClient"
        android:onClick="btnClientOnClick"
        android:background="@drawable/woodbutton_state"
        android:textSize="@dimen/bt_mode_btn_text_size"
        android:layout_alignTop="@+id/btnServer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/bt_mode_btn_client_margin_top" />

    <com.hdevteam.impiccato.UI.HDTMButton
        android:text="@string/host_button"
        android:layout_width="@dimen/bt_mode_btn_width"
        android:layout_height="@dimen/bt_mode_btn_height"
        android:id="@+id/btnServer"
        android:onClick="btnServerOnClick"
        android:background="@drawable/woodbutton_state"
        android:textSize="@dimen/bt_mode_btn_text_size"
        android:layout_marginTop="@dimen/bt_mode_btn_server_margin_top"
        android:layout_below="@+id/txtDescrGame"
        android:layout_alignLeft="@+id/btnClient"
        android:layout_alignStart="@+id/btnClient" />

</RelativeLayout>
