<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hdevteam.impiccato.HomeActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/home_scoreBar_layout_height"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/scoreBar">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_line_layout_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/line"
            android:layout_marginLeft="@dimen/home_line_layout_margin_left_right"
            android:layout_marginRight="@dimen/home_line_layout_margin_left_right"
            android:id="@+id/line"></LinearLayout>

        <ImageView
            android:layout_width="@dimen/home_instagram_facebook_layout_width_height"
            android:layout_height="@dimen/home_instagram_facebook_layout_width_height"
            android:id="@+id/instagram"
            android:visibility="visible"
            android:layout_marginRight="@dimen/home_instagram_txtSeguici_layout_margin_right_end"
            android:layout_marginEnd="@dimen/home_instagram_txtSeguici_layout_margin_right_end"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/facebook"
            android:layout_toStartOf="@+id/facebook"
            android:layout_above="@+id/line"
            android:onClick="instagramOnClick"
            app:srcCompat="@drawable/iconinstagram" />

        <com.hdevteam.impiccato.UI.HDTMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/developedBy"
            android:textSize="@dimen/home_txtSeguici_textSize"
            android:textAllCaps="true"
            android:text="@string/follow_us"
            android:gravity="center_vertical|center_horizontal"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/instagram"
            android:layout_toStartOf="@+id/instagram"
            android:layout_marginRight="@dimen/home_instagram_txtSeguici_layout_margin_right_end"
            android:layout_marginEnd="@dimen/home_instagram_txtSeguici_layout_margin_right_end"
            android:background="#fafafa" />

        <ImageView
            android:layout_width="@dimen/home_instagram_facebook_layout_width_height"
            android:layout_height="@dimen/home_instagram_facebook_layout_width_height"
            android:id="@+id/facebook"
            android:onClick="facebookOnClick"
            android:visibility="visible"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/line"
            android:layout_alignEnd="@+id/line"
            android:layout_above="@+id/line"
            app:srcCompat="@drawable/iconfacebook" />


    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/life"
        android:layout_below="@+id/scoreBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/buttons"
        android:layout_marginRight="@dimen/home_life_layout_margin_left_right"
        android:layout_marginLeft="@dimen/home_life_layout_margin_left_right"
        android:src="@drawable/life1"
        android:layout_marginTop="@dimen/home_life_layout_margin_top" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/buttons"
        android:weightSum="1"
        android:paddingLeft="@dimen/home_buttons_padding_left_right"
        android:paddingRight="@dimen/home_buttons_padding_left_right"
        android:paddingTop="@dimen/home_buttons_padding_top"
        android:layout_height="@dimen/home_buttons_layout_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.hdevteam.impiccato.UI.HDTMButton
            android:text="@string/button_multiplayer"
            android:id="@+id/btnMultiplayer"
            android:layout_width="match_parent"
            android:textSize="@dimen/home_btnMultiplayer_text_size"
            android:layout_alignTop="@+id/btnCredits"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="btnMultiPlayerOnClick"
            android:visibility="gone"
            android:background="@drawable/woodbutton_state"
            android:layout_height="@dimen/home_btn_layout_height" />

        <com.hdevteam.impiccato.UI.HDTMButton
            android:text="@string/button_singleplayer"
            android:id="@+id/btnSingleplayer"
            android:onClick="btnSinglePlayerOnClick"
            android:layout_width="match_parent"
            android:textSize="@dimen/home_btnSingleplayer_text_size"
            android:visibility="gone"
            android:layout_alignTop="@+id/btnDonate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/woodbutton_state"
            android:layout_height="65dp" />

        <com.hdevteam.impiccato.UI.HDTMButton
            android:id="@+id/btnDonate"
            android:onClick="btnPlayOnClick"
            android:layout_marginTop="@dimen/home_btnPlay_layout_margin_top"
            android:text="@string/button_play"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/woodbutton_state"
            android:textAlignment="center"
            android:layout_width="@dimen/home_btnPlay_layout_width"
            android:layout_height="@dimen/home_btn_layout_height"
            android:textSize="@dimen/home_btn_text_size" />

        <com.hdevteam.impiccato.UI.HDTMButton
            android:id="@+id/btnCredits"
            android:onClick="btnCreditsOnClick"
            android:layout_marginTop="@dimen/home_btnCredits_layout_margin_top"
            android:text="@string/button_credits"
            android:background="@drawable/woodbutton_state"
            android:layout_below="@+id/btnDonate"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/home_btn_credits_layout_width"
            android:layout_height="@dimen/home_btn_layout_height"
            android:textSize="@dimen/home_btn_text_size" />

    </RelativeLayout>

</RelativeLayout>
